Created Layout component, fixed sidenav display bug.

--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -4,3 +4,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+#main {
+  display: flex;
+  justify-content: stretch;
+}
