--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -6,7 +6,11 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-#main {
+#layout {
   display: flex;
   justify-content: stretch;
+}
+
+#main {
+  width: 100%;
 }
