--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -1,19 +1,23 @@
-body {
+html,
+body,
+#root {
   background: linear-gradient(90deg, #1cb5e0 0%, #000851 100%);
   /* background-color: red; */
   margin: 0;
   width: 100%;
+  height: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 #layout {
   display: flex;
+  height: 100%;
 }
 
 #main {
-  margin: 2em;
   width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
 }
