started ConfigMap.js text fields

--- a/client/styles/main.css
+++ b/client/styles/main.css
@@ -23,6 +23,11 @@ body,
 }
 
 #configMap {
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+.input {
+
 }
